# qasmpi

./: Makefile  README.md  pyproject.toml
src/qasmpi/: __init__.py  _cache.py  _client.py  _registry.py
tests/: test_api.py  test_client.py  test_registry.py
